[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-output-arbitration-system"
version = "0.1.0"
description = "Multi-agent arbitration pipeline for LLM output quality."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic>=2",
  "sqlalchemy",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
