[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-output-arbitration-system"
version = "0.1.0"
description = "Multi-agent arbitration pipeline for LLM output quality."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "langgraph",
  "pydantic>=2",
  "sqlalchemy",
  "streamlit",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
